--- a/package.json
+++ b/package.json
@@ -1,32 +1,18 @@
 {
-  "name": "electra",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
+  "name": "electra-website",
+  "version": "1.0.0",
+  "description": "Electra Website with live reload server",
+  "main": "server/index.js",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "start": "node server/index.js",
+    "dev": "nodemon server/index.js"
   },
   "dependencies": {
-    "@tailwindcss/vite": "^4.0.17",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "tailwindcss": "^4.0.17"
+    "express": "^4.18.3",
+    "livereload": "^0.9.3",
+    "connect-livereload": "^0.6.1"
   },
   "devDependencies": {
-    "@types/react": "^18.2.64",
-    "@types/react-dom": "^18.2.21",
-    "@typescript-eslint/eslint-plugin": "^7.1.1",
-    "@typescript-eslint/parser": "^7.1.1",
-    "@vitejs/plugin-react": "^4.2.1",
-    "eslint": "^8.57.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.5",
-    "sass": "^1.72.0",
-    "sass-embedded": "^1.86.0",
-    "typescript": "^5.2.2",
-    "vite": "^5.1.6"
+    "nodemon": "^3.1.0"
   }
 }
