--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "nodemon server/index.js",
     "dev:vite": "vite",
     "server": "cd server && php -S localhost:4243",
-    "build": "vite build",
+    "build": "vite build && cp -r server dist/",
     "preview": "vite preview"
   },
   "dependencies": {
